# obs-captions

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPARISON.md  DOCS.md  HOWTOUSE.md  README.md  config.example.toml  obs_captions.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: OBS_PLUGIN_FEASIBILITY.md  OBS_PLUGIN_IPC.md  WINDOWS.md
docs/superpowers/plans/: 2026-07-15-desktop-gui.md  2026-07-16-plugin-settings.md  2026-07-16-sp1-settings-ux-stt.md
docs/superpowers/specs/: 2026-07-15-gui-and-plugin-settings-design.md  2026-07-16-sp1-settings-ux-stt-design.md
native-plugin/: CMakeLists.txt  LICENSE  README.md  buildspec.json
native-plugin/data/locale/: en-US.ini
native-plugin/poc/: .gitignore  CMakeLists.txt  TRANSPORT_DECISION.md  pipe_transport_poc.cpp  run_poc.sh
native-plugin/src/: caption-output.cpp  caption-output.h  epoch_gate.cpp  epoch_gate.hpp  framing.cpp  framing.hpp  ipc-bridge-core.cpp  ipc-bridge-internal.cpp  ipc-bridge-teardown.cpp  ipc-bridge.cpp  ipc-bridge.hpp  ipc-transport.cpp  ipc-transport.hpp  obs-captions-filter.c  obs-captions-filter.cpp  obs-captions-filter.h  obs-captions-properties.cpp  obs-captions-properties.hpp  obs-captions-setting-ids.hpp  out_queue.cpp  out_queue.hpp  plugin-main.c  plugin-settings.cpp  plugin-settings.hpp  quiesce.cpp  quiesce.hpp  ring.cpp  ring.hpp
native-plugin/tests/: CMakeLists.txt  epoch_gate_test.cpp  framing_test.cpp  ipc_bridge_child_log.cpp  ipc_bridge_teardown_test.cpp  ipc_bridge_test.cpp  ipc_bridge_test_helpers.cpp  ipc_bridge_test_helpers.hpp  ipc_transport_test.cpp  plugin_settings_test.cpp  quiesce_test.cpp  ring_test.cpp  run_tests.sh  writer_serialize_test.cpp
scripts/: benchmark.py  build_plugin_windows.ps1  build_windows.ps1  build_windows.py  package_windows_release.ps1  setup_obs_deps_windows.ps1
src/obs_captions/: __main__.py  app_runner.py  check_engine.py  cli.py  config.py  export_sink.py  gui.py  obs_display.py  obs_hotkey.py  obs_sink.py  obs_ws_client.py  packaging.py  pipeline.py  platform_dll.py  security.py  settings_fields.py  settings_schema.py  settings_types.py  text.py  toml_writer.py  vad.py
src/obs_captions/audio/: __init__.py  capture.py  devices.py  loopback.py
src/obs_captions/gui/: __init__.py  app.py  config_io.py  controls.py  runner.py  sections.py  widgets.py
src/obs_captions/ipc/: __init__.py  control_dispatcher.py  framing.py  sidecar.py
src/obs_captions/ipc/framing/: __init__.py  decode.py  encode.py  messages.py
src/obs_captions/server/: __init__.py  app.py  hub.py  overlay_style.py
src/obs_captions/stt/: __init__.py  assemblyai.py  azure.py  base.py  deepgram.py  device.py  elevenlabs_realtime.py  fake.py  google.py  google_speech_v2.py  groq.py  hardware.py  local_whisper.py  openai_realtime.py  openrouter.py  registry.py  replicate.py  streaming.py  utterance.py  validate.py  xai.py
src/obs_captions/web/overlay/: overlay.css  overlay.html  overlay.js
src/obs_captions/web/settings/: index.html  settings.css  settings.js
tests/: _fake_speech_v2.py  _fake_ws.py  test_assemblyai.py  test_audio.py  test_azure.py  test_cli.py  test_cli_gui_dispatch.py  test_config.py  test_deepgram.py  test_device.py  test_elevenlabs_realtime.py  test_export_sink.py  test_feature4_suppression.py  test_feature5_wrap.py  test_google.py  test_google_speech_v2.py  test_groq.py  test_gui.py  test_gui_app_smoke.py  test_gui_config_io.py  test_gui_controls.py  test_gui_runner.py  test_gui_sections.py  test_gui_widgets.py  test_ipc_framing.py  test_ipc_sidecar.py  test_local_whisper.py  test_loopback.py  test_obs_hotkey.py  test_obs_sink.py  test_openai_realtime.py  test_openrouter.py  test_packaging.py  test_packaging_console.py  test_pipeline.py  test_platform_dll.py  test_registry.py  test_replicate.py  test_server.py  test_server_settings.py  (+11 more)
