[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obs-captions"
version = "0.1.4"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "websockets",
    "pydantic>=2",
    "pydantic-settings",
    "numpy",
    "sounddevice",
    "python-dotenv",
    "click",
    "httpx",
    "tomli-w",
]

[project.optional-dependencies]
local = ["faster-whisper", "onnxruntime", "silero-vad"]
# Windows/Linux NVIDIA CUDA runtime wheels for the local engine (device="cuda"/"auto").
# Guarded so `uv sync` on macOS never tries to install them (no macOS wheels exist).
gpu = [
    "nvidia-cublas-cu12; platform_system != 'Darwin'",
    "nvidia-cudnn-cu12; platform_system != 'Darwin'",
]
openai = ["openai"]
elevenlabs = ["elevenlabs"]
google = ["google-cloud-speech"]
obs = ["simpleobsws>=1.2.0"]
bench = ["psutil>=5.9"]
# Windows desktop/system-audio (WASAPI) loopback capture (config audio.source="loopback").
# PyAudioWPatch ships Windows-only wheels; the marker keeps macOS/Linux `uv sync` clean.
loopback = ["pyaudiowpatch; platform_system == 'Windows'"]
azure = ["azure-cognitiveservices-speech"]

[project.scripts]
obs-captions = "obs_captions.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff", "pytest-cov", "pyinstaller==6.14.1"]

[tool.hatch.build.targets.wheel]
# The static overlay web assets live INSIDE the package
# (src/obs_captions/web/overlay/overlay.{html,css,js}); hatch ships every file
# under a package dir, so they are included in the wheel automatically (verified
# via `uv build` — see obs_captions/web/** in the archive). This makes them
# importable next to the package (packaging.resolve_web_dir, dev/pip) and
# bundle-able by PyInstaller. Do NOT add a force-include for them — that
# double-adds the same paths and hatch errors out.
packages = ["src/obs_captions"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not slow"]
markers = ["slow: hardware/model integration tests skipped by default"]
